--- a/swolfpy/UI/PySWOLF.ui
+++ b/swolfpy/UI/PySWOLF.ui
@@ -49,7 +49,7 @@
            </font>
           </property>
           <property name="currentIndex">
-           <number>5</number>
+           <number>7</number>
           </property>
           <widget class="QWidget" name="Start">
            <attribute name="title">
@@ -8483,6 +8483,19 @@ p, li { white-space: pre-wrap; }
                        </property>
                        <property name="text">
                         <string>Minimize</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QCheckBox" name="Multi_start_opt">
+                       <property name="minimumSize">
+                        <size>
+                         <width>200</width>
+                         <height>0</height>
+                        </size>
+                       </property>
+                       <property name="text">
+                        <string>Multi-start Opt</string>
                        </property>
                       </widget>
                      </item>
